--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -20,6 +20,31 @@ h1 {
     color: var(--orangecolor);
 }
 
+.flex-container {
+    border: 3px black;
+    background-color: lightsalmon;
+    opacity: 50%;
+}
+
+.flex-item {
+    max-width: 450px;
+    margin: 1rem;
+    border: 1px solid black;
+    padding: 0rem;
+    background-color: #bbb;
+    color: #333;
+}
+
+.item1 {
+    min-height: 100px;
+}
+.item2 {
+    min-height: 100px;
+}
+.item3 {
+    min-height: 100px;
+}
+
 h2 {
     color: var(--lybluecolor);
 }
