--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -21,6 +21,8 @@ h1 {
 }
 
 .flex-container {
+    flex-direction: column;
+    justify-content: space-around;
     border: 3px black;
     background-color: lightsalmon;
     opacity: 50%;
