--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -23,14 +23,15 @@ h1 {
 .flex-container {
     border: 3px black;
     background-color: lightsalmon;
-    opacity: 50%;
+    display: flex;
+    flex-direction: column-reverse;
 }
 
 .flex-item {
     max-width: 450px;
     margin: 1rem;
     border: 1px solid black;
-    padding: 0rem;
+    padding: 0.5rem;
     background-color: #bbb;
     color: #333;
 }
