--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -28,7 +28,7 @@ h1 {
 
 div {
     border: 3px black;
-    background-color: grey;
+    background-color: rgb(209, 209, 209);
     display: flex;
     flex-direction: column-reverse;
 }
@@ -37,7 +37,7 @@ section {
     margin: 1rem;
     border: 1px solid black;
     padding: 0.5rem;
-    background-color: #bbb;
+    background-color: #818181;
     color: #333;
 }
 
@@ -52,6 +52,8 @@ section {
 }
 
 h2 {
+    display: flex;
+    justify-content: center;
     color: var(--lybluecolor);
 }
 
@@ -93,4 +95,16 @@ article {
     top: 200px;
     right: 0;
     width: 200px;
+}
+
+.advent {
+    display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+    background-color: transparent;
+}
+
+.raftsize{
+    width: 175px;
+    height: auto;
 }
